--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 <body class="light">
      	 
-    <h2>Titulo do esquema</h2>    
+    <h2>My title</h2>    
 	
 	<p>
 	    Lorem ipsum class massa bibendum sapien in diam quis justo congue, aliquet potenti vel
